selfhost/test/typechecker/set/error_type_mismatch_bindingdecl.1.out
Error at %FILE_NAME%:1:21
Type mismatch
  |  val a: Set<Int> = #{"1", "2", "3"}
                         ^
Expected: Int
but instead found: String
